# llm-service-prompting

./: README.md  main.py  pyproject.toml
.github/workflows/: black-fomatter.yml
legacy/: evaluation_agent.py
pipeline/: create_evaluation.py  generate_agent.py  generate_system_prompt.py  pipeline.py  regenerate_agent.py
util/: create_config.py  read_output.py
