[tool.poetry]
name = "llm-service-prompting"
version = "0.1.0"
description = ""
authors = ["jhjeon <powwow94@hanmail.net>"]
readme = "README.md"
packages = [{include = "llm_service_prompting"}]

[tool.poetry.dependencies]
python = "^3.11"
dspy-ai = "^2.4.9"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

